added basic content to landing page

--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,19 @@
     <header>
         <nav>
             <button>Home</button>
-            <button>Menu</button>
-            <button>About</button>
+            <button>Food and Drinks</button>
+            <button>About irithyll tavern</button>
+            <button>Pigeon post</button>
         </nav>
     </header>
     <div id="content">
-
+        <h1>The Bard's Barrel</h1>
+        <div>
+            <p>
+                "Welcome to The Bard's Barrel! Where tales flow as freely as ale, And melodies weave magic in the air. Join us for a night of mirth and revelry!"
+            </p>
+            <button>Food and Drinks</button>
+        </div>
     </div>
 </body>
 </html>
