added some styling

--- a/src/index.html
+++ b/src/index.html
@@ -6,21 +6,21 @@
     <title>Restaurant</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <button>Home</button>
-            <button>Food and Drinks</button>
-            <button>About irithyll tavern</button>
-            <button>Pigeon post</button>
+    <header class="header">
+        <nav class="nav">
+            <button class="home-btn" role="button">home</button>
+            <button class="food-and-drinks-btn" role="button">Food and Drinks</button>
+            <button class="about-bards-barrel-btn" role="button">About Bard's Barrel</button>
+            <button class="pigeon-post-btn" role="button">Pigeon post</button>
         </nav>
     </header>
     <div id="content">
-        <h1>The Bard's Barrel</h1>
+        <h1 class="bar-name">The Bard's Barrel</h1>
         <div>
-            <p>
+            <p class="bar-intro">
                 "Welcome to The Bard's Barrel! Where tales flow as freely as ale, And melodies weave magic in the air. Join us for a night of mirth and revelry!"
             </p>
-            <button>Food and Drinks</button>
+            <button class="food-and-drinks-btn">Food and Drinks</button>
         </div>
     </div>
 </body>
