--- a/src/index.html
+++ b/src/index.html
@@ -8,19 +8,26 @@
 <body>
     <header class="header">
         <nav class="nav">
-            <button class="home-btn" role="button">home</button>
-            <button class="food-and-drinks-btn" role="button">Food and Drinks</button>
-            <button class="about-bards-barrel-btn" role="button">About Bard's Barrel</button>
-            <button class="pigeon-post-btn" role="button">Pigeon post</button>
+            <div class="top-nav">
+                <button class="home-btn" role="button"></button>
+                <button class="open-btn" role="button">open</button>
+            </div>
+            <div class="bottom-nav">
+                <div class="bottom-nav-btn"><button class="food-and-drinks-btn" role="button">Food and Drinks</button></div>
+                <div class="bottom-nav-btn"><button class="about-bards-barrel-btn" role="button">About Bard's Barrel</button></div>
+                <div class="bottom-nav-btn"><button class="pigeon-post-btn" role="button">Pigeon post</button></div>
+            </div>
         </nav>
     </header>
     <div id="content">
-        <h1 class="bar-name">The Bard's Barrel</h1>
-        <div>
-            <p class="bar-intro">
-                "Welcome to The Bard's Barrel! Where tales flow as freely as ale, And melodies weave magic in the air. Join us for a night of mirth and revelry!"
-            </p>
-            <button class="food-and-drinks-btn">Food and Drinks</button>
+        <div class="container">
+            <h1 class="bar-name">The Bard's Barrel</h1>
+            <div>
+                <p class="bar-intro">
+                    "Welcome to The Bard's Barrel! Where tales flow as freely as ale, And melodies weave magic in the air. Join us for a night of mirth and revelry!"
+                </p>
+                <button class="food-and-drinks-btn">Food and Drinks</button>
+            </div>
         </div>
     </div>
 </body>
