--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,9 @@
         <nav class="nav">
             <div class="top-nav">
                 <button class="home-btn" role="button"></button>
-                <button class="open-btn" role="button">open</button>
+                <button class="open-btn" role="button"></button>
             </div>
-            <div class="bottom-nav">
+            <div class="bottom-nav appear">
                 <div class="bottom-nav-btn"><button class="food-and-drinks-btn" role="button">Food and Drinks</button></div>
                 <div class="bottom-nav-btn"><button class="about-bards-barrel-btn" role="button">About Bard's Barrel</button></div>
                 <div class="bottom-nav-btn"><button class="pigeon-post-btn" role="button">Pigeon post</button></div>
